@@ -2,7 +2,10 @@ Maverick Synergy 3.0.0-RC7 - TBC
  
  Bug Fixes
     o Do not read or write SSH_FILEXFER_ATTR_SUBSECOND_TIMES if parent time flag has not been specified.
-       
+    o Refactored SFTP session cleanup to ensure events are always generated.
+    o EVENT_AUTHENTICATION_STARTED added and fired once to indicate client has started authentication service with username parameter, EVENT_USERAUTH_STARTED now is fired at the beginning of each separate authentication attempt with parameters for user and method being attempted. 
+    o Fixed event started/finished attributes in authentication to encompass entire authentication step, and separately on each individual attempt.
+    
 =================
 =  HISTORY      =
 =================
